[gd_scene load_steps=3 format=2]

[ext_resource path="res://padoru_maki.png" type="Texture" id=1]
[ext_resource path="res://Control.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
margin_left = -40.0
margin_top = 60.0
margin_right = 116.0
margin_bottom = 80.0
rect_scale = Vector2( 0.5, 0.5 )
alignment = 1

[node name="back_to_menu_2" type="Button" parent="Control/HBoxContainer"]
margin_right = 54.0
margin_bottom = 20.0
text = "Return"

[node name="replay_2" type="Button" parent="Control/HBoxContainer"]
margin_left = 58.0
margin_right = 112.0
margin_bottom = 20.0
text = "Replay"

[node name="quit_from_final_2" type="Button" parent="Control/HBoxContainer"]
margin_left = 116.0
margin_right = 156.0
margin_bottom = 20.0
text = "Quit"

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.3, 0.3 )
[connection signal="pressed" from="Control/HBoxContainer/back_to_menu_2" to="Control" method="_on_back_to_menu_2_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/replay_2" to="Control" method="_on_replay_2_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/quit_from_final_2" to="Control" method="_on_quit_from_final_2_pressed"]
